small fixes and tweaks
-fixed about me description being too small

-tweaked projects items to be in alphabetical order

--- a/mystyle.css
+++ b/mystyle.css
@@ -82,6 +82,6 @@ main {
 }
 
 
-.about {
+.aboutdescription {
     font-size: 3rem;
 }
